Add style to body

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </header>
 
     <main>
-
+    <div class="game-board">
         <!--Countdown Timer and Score Keeping Area-->
 
         <div class="time-score-area">
@@ -31,7 +31,7 @@
 
         <!-- Main Game Board-->
 
-        <div class="game-area">
+        <div class="hole-area">
             <div class="mole-hole hole1"></div>
             <div class="mole-hole hole2"></div>
             <div class="mole-hole hole3"></div>
@@ -47,7 +47,7 @@
             <div class="rules"></div>
         </div>
 
-        
+    </div>
     </main>
 
     <footer>
