Add style to time and score counters

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         <!--Countdown Timer and Score Keeping Area-->
 
         <div class="time-score-area">
-            <div class="score"></div>
-            <div class="time"></div>
+            <div class="score">0</div>
+            <div class="time">30</div>
             <div class="sound"></div>
         </div>
 
