Add buttons for starting game and to open rules section

--- a/index.html
+++ b/index.html
@@ -43,8 +43,12 @@
         <!--Game Start and Rules Area-->
 
         <div class="instructions">
-            <div class="start-game"></div>
-            <div class="rules"></div>
+            <div class="start-game">
+                <button class="start">Start Game</button>
+            </div>
+            <div class="rules">
+                <button class="rules">How to Play</button>
+            </div>
         </div>
 
     </div>
