Add divs to contain a mole for each hole

--- a/index.html
+++ b/index.html
@@ -32,12 +32,24 @@
         <!-- Main Game Board-->
 
         <div class="hole-area">
-            <div class="mole-hole hole1"></div>
-            <div class="mole-hole hole2"></div>
-            <div class="mole-hole hole3"></div>
-            <div class="mole-hole hole4"></div>
-            <div class="mole-hole hole5"></div>
-            <div class="mole-hole hole6"></div>
+            <div class="mole-hole hole1">
+                <div class="boris"></div>
+            </div>
+            <div class="mole-hole hole2">
+                <div class="boris"></div>
+            </div>
+            <div class="mole-hole hole3">
+                <div class="boris"></div>
+            </div>
+            <div class="mole-hole hole4">
+                <div class="boris"></div>
+            </div>
+            <div class="mole-hole hole5">
+                <div class="boris"></div>
+            </div>
+            <div class="mole-hole hole6">
+                <div class="boris"></div>
+            </div>
         </div>
 
     </div>
@@ -53,7 +65,7 @@
             <button class="rules">How to Play</button>
         
     </div>
-    
+
     </main>
 
     <footer>
