Add global variables to script.js. Add HTML to count number of missed hits

--- a/index.html
+++ b/index.html
@@ -20,11 +20,14 @@
     </header>
 
     <main>
+
     <div class="game-board">
+
         <!--Countdown Timer and Score Keeping Area-->
 
         <div class="time-score-area">
             <div class="score">0</div>
+            <div class="miss">0</div>
             <div class="time">30</div>
             <div class="sound"></div>
         </div>
