Add class list for hit and miss to mole holes

--- a/index.html
+++ b/index.html
@@ -36,22 +36,22 @@
 
         <div class="hole-area">
             <div class="mole-hole hole1">
-                <div class="boris"></div>
+                <div class="boris boris-miss boris-hit"></div>
             </div>
             <div class="mole-hole hole2">
-                <div class="boris"></div>
+                <div class="boris boris-miss boris-hit"></div>
             </div>
             <div class="mole-hole hole3">
-                <div class="boris"></div>
+                <div class="boris boris-miss boris-hit"></div>
             </div>
             <div class="mole-hole hole4">
-                <div class="boris"></div>
+                <div class="boris boris-miss boris-hit"></div>
             </div>
             <div class="mole-hole hole5">
-                <div class="boris"></div>
+                <div class="boris boris-miss boris-hit"></div>
             </div>
             <div class="mole-hole hole6">
-                <div class="boris"></div>
+                <div class="boris boris-miss boris-hit"></div>
             </div>
         </div>
 
