--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <footer>
         <!--Social Media Links Go Here-->
     </footer>
-
+    <audio id="whack-sound" src="assets/sounds/whack.wav"></audio>
     
     <script src="https://kit.fontawesome.com/bc577d1dcb.js" crossorigin="anonymous"></script>
 
