Add start function to start game button

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="time-score-area">
             <div class="score">0</div>
             <div class="miss">0</div>
-            <div class="time">30</div>
+            <div class="time"></div>
             <div class="sound"></div>
         </div>
 
@@ -62,7 +62,7 @@
     <div class="instructions">
 
         <div class="start-game">
-            <button class="start">Start Game</button>
+            <button class="start" onclick="startTimedGame()">Start Game</button>
         </div>
         <div class="rules">
             <button class="rules">How to Play</button>
