--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
         <!-- Main Game Board-->
 
-        <div class="hole-area">
+        <div class="hole-area" id="hole-area">
             <div class="mole-hole hole1">
                 <div class="boris boris-miss boris-hit"></div>
             </div>
@@ -67,6 +67,16 @@
         <div class="rules">
             <button class="rules">How to Play</button>
         
+    </div>
+
+    <!-- Div to contain rules pop up modal-->
+
+    <div class="rules" id="rules">
+        <div class="rules-title">
+            <div><h2>How to Play</h2></div>
+            <button class="close-btn">&times;</button>
+        </div>
+        <div class="rules-body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, necessitatibus illo. Aperiam reprehenderit at nihil eligendi sit quas beatae veritatis.</div>
     </div>
 
     </main>
