--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
         <div class="start-game">
             <button class="start" onclick="startTimedGame()">Start Game</button>
         </div>
-        <div class="rules">
-            <button class="rules">How to Play</button>
+        <div class="rules-open">
+            <button class="rules-button">How to Play</button>
         
     </div>
 
@@ -74,7 +74,7 @@
     <div class="rules" id="rules">
         <div class="rules-title">
             <div><h2>How to Play</h2></div>
-            <button class="close-btn">&times;</button>
+            <button id="close-rules" class="close-btn">&times;</button>
         </div>
         <div class="rules-body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, necessitatibus illo. Aperiam reprehenderit at nihil eligendi sit quas beatae veritatis.</div>
     </div>
