--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <button class="start" onclick="startTimedGame()">Start Game</button>
         </div>
         <div class="rules-open">
-            <button class="rules-button">How to Play</button>
+            <button class="rules-button" onclick="openRules()">How to Play</button>
         
     </div>
 
@@ -74,7 +74,7 @@
     <div class="rules" id="rules">
         <div class="rules-title">
             <div><h2>How to Play</h2></div>
-            <button id="close-rules" class="close-btn">&times;</button>
+            <button id="close-rules" class="close-btn" onclick="closeRules()">&times;</button>
         </div>
         <div class="rules-body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, necessitatibus illo. Aperiam reprehenderit at nihil eligendi sit quas beatae veritatis.</div>
     </div>
