Add basic HTML structure for feedback form

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         
     </div>
 
-    <!-- Div to contain rules pop up modal-->
+    <!-- Div to contain rules pop up-->
 
     <div class="rules" id="rules">
         <div class="rules-title">
@@ -77,6 +77,18 @@
             <button id="close-rules" class="close-btn" onclick="closeRules()">&times;</button>
         </div>
         <div class="rules-body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, necessitatibus illo. Aperiam reprehenderit at nihil eligendi sit quas beatae veritatis.</div>
+    </div>
+
+    <!-- Div to contain feedback pop up-->
+
+    <div class="feedback" id="feedback">
+
+        <div class="feedback-title">
+            <div><h2>Rate our Game</h2></div>
+            <button id="close-feedback" class="close-btn" onclick="closeFeedback()">&times;</button>
+        </div>
+        <div class="star-rating"></div>
+        <div class="feedback-body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, necessitatibus illo. Aperiam reprehenderit at nihil eligendi sit quas beatae veritatis.</div>
     </div>
 
     </main>
