--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
         <!--Countdown Timer and Score Keeping Area-->
 
         <div class="time-score-area">
-            <div class="score">0</div>
-            <div class="miss">0</div>
-            <div class="time"></div>
+            <div class="score"><i class="fas fa-thumbs-up"></i>0</div>
+            <div class="miss"><i class="fas fa-thumbs-down"></i>0</div>
+            <div class="time"><span id="time-left"></span></div>
             <div class="sound"></div>
         </div>
 
