Fix countdown timer not displaying

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="time-score-area">
             <div class="score"><i class="fas fa-thumbs-up"></i>0</div>
             <div class="miss"><i class="fas fa-thumbs-down"></i>0</div>
-            <div class="time"><span id="time-left"></span></div>
+            <div class="time"><span id="time-left">30</span></div>
             <div class="sound"></div>
         </div>
 
