Add style to hit and miss counters

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         <!--Countdown Timer and Score Keeping Area-->
 
         <div class="time-score-area">
-            <div class="score"><i class="fas fa-thumbs-up"></i>0</div>
-            <div class="miss"><i class="fas fa-thumbs-down"></i>0</div>
+            <div class="hit">HITS:<span class="score">0</span></div>
+            <div class="no-hit">MISSES:<span class="miss">0</span></div>
             <div class="time"><span id="time-left">30</span></div>
             <div class="sound"></div>
         </div>
