Add basic HTML for final scores pop up

--- a/index.html
+++ b/index.html
@@ -91,6 +91,24 @@
         <div class="feedback-body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, necessitatibus illo. Aperiam reprehenderit at nihil eligendi sit quas beatae veritatis.</div>
     </div>
 
+    <!--Div to contain scores pop up at game end-->
+
+    <div class="final-score" id="final-score">
+
+        <h2>CONGRATULATIONS</h2>
+
+        <p>You have scored</p>
+
+        <span id="fscore">0</span>
+
+        <p>Would you like to play again?</p>
+
+        <button>Play again</button>
+
+        <button onclick="openFeedback()">Rate our Game</button>
+
+    </div>
+
     </main>
 
     <footer>
