--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     <div class="final-score" id="final-score">
 
         <h2>CONGRATULATIONS</h2>
-        <button id="close-score" class="close-btn" onclick="closeScores()">&times;</button>
+        <button id="close-score" class="close-btn" onclick="closeScore()">&times;</button>
 
         <p>You have scored</p>
 
