Fix error where score not appearing in pop up

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
         <p>You have scored</p>
 
-        <span id="fscore">0</span>
+        <div id="fscore">0</div>
 
         <p>Would you like to play again?</p>
 
