Add radio buttons to feedback form

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <div class="rules-body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, necessitatibus illo. Aperiam reprehenderit at nihil eligendi sit quas beatae veritatis.</div>
     </div>
 
-    <!-- Div to contain feedback pop up-->
+    <!-- Div to contain feedback pop up - Star rating adapted from Coding Nepal Tutorial-->
 
     <div class="feedback" id="feedback">
 
@@ -87,7 +87,23 @@
             <div><h2>Rate our Game</h2></div>
             <button id="close-feedback" class="close-btn" onclick="closeFeedback()">&times;</button>
         </div>
-        <div class="star-rating"></div>
+
+        <div class="star-container">
+
+            <div class="star-rating">
+                <input type="radio" name="rate" id="rate-5">
+                <label for="rate-5"></label>
+                <input type="radio" name="rate" id="rate-4">
+                <label for="rate-4"></label>
+                <input type="radio" name="rate" id="rate-3">
+                <label for="rate-3"></label>
+                <input type="radio" name="rate" id="rate-2">
+                <label for="rate-2"></label>
+                <input type="radio" name="rate" id="rate-1">
+                <label for="rate-1"></label>
+            </div>
+            
+        </div>    
         <div class="feedback-body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, necessitatibus illo. Aperiam reprehenderit at nihil eligendi sit quas beatae veritatis.</div>
     </div>
 
