--- a/index.html
+++ b/index.html
@@ -92,17 +92,17 @@
 
             <div class="star-rating">
                 <input type="radio" name="rate" id="rate-5">
-                <label for="rate-5"></label>
+                <label for="rate-5" class="fas fa-star"></label>
                 <input type="radio" name="rate" id="rate-4">
-                <label for="rate-4"></label>
+                <label for="rate-4" class="fas fa-star"></label>
                 <input type="radio" name="rate" id="rate-3">
-                <label for="rate-3"></label>
+                <label for="rate-3" class="fas fa-star"></label>
                 <input type="radio" name="rate" id="rate-2">
-                <label for="rate-2"></label>
+                <label for="rate-2" class="fas fa-star"></label>
                 <input type="radio" name="rate" id="rate-1">
-                <label for="rate-1"></label>
+                <label for="rate-1" class="fas fa-star"></label>
             </div>
-            
+
         </div>    
         <div class="feedback-body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, necessitatibus illo. Aperiam reprehenderit at nihil eligendi sit quas beatae veritatis.</div>
     </div>
