Add styling to form text area

--- a/index.html
+++ b/index.html
@@ -108,11 +108,11 @@
             <h3>I don't like it</h3>
 
             <div class="textarea">
-                <textarea name="comment" id="comment" cols="30" rows="10"></textarea>
+                <textarea name="comment" id="comment" cols="30" placeholder="Please enter any comments you have here..."></textarea>
             </div>
 
             <div class="submit-button">
-                <button type="submit">Submit/button>
+                <button type="submit">Submit</button>
             </div>
 
         </form>      
