Add text content for star ratings

--- a/index.html
+++ b/index.html
@@ -102,11 +102,9 @@
                     <label for="rate-2" class="fas fa-star"></label>
                     <input type="radio" name="rate" id="rate-1">
                     <label for="rate-1" class="fas fa-star"></label>
+                    <header>Placeholder</header>
                 </div>
             </div> 
-            
-            <h3>I don't like it</h3>
-
             <div class="textarea">
                 <textarea name="comment" id="comment" cols="30" placeholder="Please enter any comments you have here..."></textarea>
             </div>
