Add thank you text for form submit

--- a/index.html
+++ b/index.html
@@ -96,6 +96,9 @@
                 </div>
 
                 <div class="star-container">
+                    <div class="submitted">
+                        <div class="thanks-you-text">Thank you for reviewing our game!</div>
+                    </div>
                     <div class="star-rating">
                         <input type="radio" name="rate" id="rate-5">
                         <label for="rate-5" class="fas fa-star"></label>
