Add further styling to feedback form

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
                 <div class="star-container">
                     <div class="submitted">
-                        <div class="thanks-you-text">Thank you for reviewing our game!</div>
+                        <div class="thank-you-text">Thank you for reviewing our game!</div>
                     </div>
                     <div class="star-rating">
                         <input type="radio" name="rate" id="rate-5">
@@ -110,7 +110,7 @@
                         <label for="rate-2" class="fas fa-star"></label>
                         <input type="radio" name="rate" id="rate-1">
                         <label for="rate-1" class="fas fa-star"></label>
-                        <form action="https://formdump.codeinstitute.net/" method="POST">
+                        <form action="#" method="POST">
                             <header></header>
 
                             <div class="textarea">
@@ -119,7 +119,7 @@
                             </div>
 
                             <div class="submit-button">
-                                <button type="submit">Submit</button>
+                                <button type="submit" id="feedback-submit">Submit</button>
                             </div>
                         </form>
 
