Add text to rules pop up

--- a/index.html
+++ b/index.html
@@ -80,8 +80,13 @@
                     </div>
                     <button id="close-rules" class="close-btn" onclick="closeRules()">&times;</button>
                 </div>
-                <div class="rules-body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati,
-                    necessitatibus illo. Aperiam reprehenderit at nihil eligendi sit quas beatae veritatis.</div>
+                <div class="rules-body">
+                    <p>Fed up with hiding in fridges, the UK Prime Minister Boris Johnson, has now taken to the sewers below Downing Street to evade his current nemesis….the Northern Ireland Protocol!</p>
+                    <p>Take control as Ursula von der Leyen, and using the NI Protocol, ‘Bash Boris’ back into Number 10!!!</p>
+                    <p>The rules are easy….Bash Boris as many times as you can within 30 seconds using your mouse or finger….be quick though….you never know where he will pop up next!</p>
+                    <p>For the best user experience, we recommend using a desktop and mouse to enjoy this game.</p>
+                    <p>If using a mobile or tablet device, orient your screen horizontally. </p>
+                </div>
             </div>
 
             <!-- Div to contain feedback pop up - Star rating adapted from Coding Nepal Tutorial-->
