Add styling to final scores window

--- a/index.html
+++ b/index.html
@@ -145,9 +145,9 @@
 
                 <p>Would you like to play again?</p>
 
-                <button>Play again</button>
+                <button class="fscorebtn">Play again</button>
 
-                <button onclick="openFeedback()">Rate our Game</button>
+                <button class="fscorebtn" onclick="openFeedback()">Rate our Game</button>
 
             </div>
 
