Assign start game function to play again button on final score pop up

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 
                 <p>Would you like to play again?</p>
 
-                <button class="fscorebtn">Play again</button>
+                <button class="fscorebtn" onclick="startTimedGame()">Play again</button>
 
                 <button class="fscorebtn" onclick="openFeedback()">Rate our Game</button>
 
