--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <div class="game-title">
             <h1>Bash Boris</h1>
         </div>
+        <div class="mute-button"><i class="fas fa-volume-mute"></i></div>
     </header>
 
     <main>
