Add styling to mute button

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="game-title">
             <h1>Bash Boris</h1>
         </div>
-        <div class="mute-button"><i class="fas fa-volume-mute"></i></div>
+        <div class="mute-button"><button id="mute-btn"><i class="fas fa-volume-mute"></i></button></div>
     </header>
 
     <main>
