Add label to timer and style

--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
             <div class="time-score-area">
                 <div class="hit"><h3>HITS</h3><span class="score">0</span></div>
                 <div class="no-hit"><h3>MISSES</h3><span class="miss">0</span></div>
-                <div class="time"><span id="time-left">30</span></div>
-                <div class="sound"></div>
+                <div class="time"><p>Time left:</p><span id="time-left">30</span></div>
             </div>
 
             <!-- Main Game Board-->
