Add style to rotation covering div

--- a/index.html
+++ b/index.html
@@ -151,14 +151,15 @@
 
             </div>
 
-            <!--Div to hold screen asking users to rotate horizontaly if under 568 px wide-->
-
-            <div class="rotation-div">
-                <h1>Please rotate your screen horizontally to best enjoy this game</h1>
-                <img src="./assets/images/rotate screen.png" alt="Please rotate your screen">
-            </div>
-
     </main>
+
+     <!--Div to hold screen asking users to rotate horizontaly if under 568 px wide-->
+
+    <div class="rotation-div">
+        <h1>Please rotate your screen horizontally to best enjoy this game</h1>
+        <img src="./assets/images/rotate-screen.png" alt="Please rotate your screen">
+    </div>
+    
 
     <footer>
         <!--Social Media Links Go Here-->
