Add social media links to footer

--- a/index.html
+++ b/index.html
@@ -162,7 +162,16 @@
     
 
     <footer>
-        <!--Social Media Links Go Here-->
+        <div id="social">
+            <ul id="social-links">
+                <li><a href="https://www.facebook.com/" target="_blank" rel="noopener"
+                        aria-label="Visit our Facebook Page (Opens in a new window)"><i class="fab fa-facebook-square"></i></a></li>
+                <li><a href="https://www.twitter.com" target="_blank" rel="noopener" aria-label="Visit our Twitter Feed (Opens in a new window)"><i
+                            class="fab fa-twitter-square"></i></a></li>
+                <li><a href="https://www.instagram.com/" target="_blank" rel="noopener"
+                        aria-label="Visit our Instagram Feed (Opens in a new window)"><i class="fab fa-instagram-square"></i></a></li>
+            </ul>
+            </div>
     </footer>
     <audio id="whack-sound" class="sounds" src="assets/sounds/whack.wav"></audio>
 
