Fix mute button function

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <header>
         <div class="game-title">
-            <h1>Bash Boris</h1>
+            <h1>BASH BORIS</h1>
         </div>
         <div class="mute-button"><button onclick="muteAudio()" id="mute-btn"><i id="vol-icon" class="fas fa-volume-mute"></i></button></div>
     </header>
@@ -172,8 +172,9 @@
                         aria-label="Visit our Instagram Feed (Opens in a new window)"><i class="fab fa-instagram-square"></i></a></li>
             </ul>
             </div>
+            <p>&copy; Chris McGonigle 2021</p>
     </footer>
-    <audio id="whack-sound" class="sounds" src="assets/sounds/whack.wav"></audio>
+    <audio muted id="whack-sound" class="sounds" src="assets/sounds/whack.wav"></audio>
 
     <script src="https://kit.fontawesome.com/bc577d1dcb.js" crossorigin="anonymous"></script>
 
