Add div to hold game mode select buttons

--- a/index.html
+++ b/index.html
@@ -59,6 +59,14 @@
 
         </div>
 
+        <!--Div to contain game mode options-->
+        
+        <div class="game-modes">
+            <button class="easy">EASY</button>
+            <button class="normal">NORMAL</button>
+            <button class="hard">HARD</button>
+        </div>
+
         <!--Game Start and Rules Area-->
 
         <div class="instructions">
