Style game select mode buttons

--- a/index.html
+++ b/index.html
@@ -60,8 +60,9 @@
         </div>
 
         <!--Div to contain game mode options-->
-        
+
         <div class="game-modes">
+            <h2>Select your difficulty level...</h2>
             <button class="easy">EASY</button>
             <button class="normal">NORMAL</button>
             <button class="hard">HARD</button>
