Add function to open game modes window

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <div class="instructions">
 
             <div class="start-game">
-                <button class="start" onclick="startTimedGame()">Start Game</button>
+                <button class="start" onclick="gameMode()">Start Game</button>
             </div>
             <div class="rules-open">
                 <button class="rules-button" onclick="openRules()">How to Play</button>
