Link game functions to respective level select buttons

--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
 
         <div class="game-modes">
             <h2>Select your difficulty level...</h2>
-            <button class="easy">EASY</button>
-            <button class="normal">NORMAL</button>
-            <button class="hard">HARD</button>
+            <button onclick="borisUpEasy()" class="easy">EASY</button>
+            <button onclick="borisUpNormal()" class="normal">NORMAL</button>
+            <button onclick="borisUpHard()" class="hard">HARD</button>
         </div>
 
         <!--Game Start and Rules Area-->
