Add proper function names to game level selector buttons

--- a/index.html
+++ b/index.html
@@ -61,11 +61,11 @@
 
         <!--Div to contain game mode options-->
 
-        <div class="game-modes">
+        <div id="game-modes">
             <h2>Select your difficulty level...</h2>
-            <button onclick="borisUpEasy()" class="easy">EASY</button>
-            <button onclick="borisUpNormal()" class="normal">NORMAL</button>
-            <button onclick="borisUpHard()" class="hard">HARD</button>
+            <button onclick="startEasyTimedGame()" class="easy">EASY</button>
+            <button onclick="startNormalTimedGame()" class="normal">NORMAL</button>
+            <button onclick="startHardTimedGame()" class="hard">HARD</button>
         </div>
 
         <!--Game Start and Rules Area-->
