Tweak rotation div text to fit on smaller screen sizes

--- a/index.html
+++ b/index.html
@@ -165,7 +165,10 @@
      <!--Div to hold screen asking users to rotate horizontaly if under 568 px wide-->
 
     <div class="rotation-div">
-        <h1>Please rotate your screen horizontally to best enjoy this game</h1>
+        <p>Please rotate your</p>  
+        <p>screen horizontally</p> 
+        <p>to best enjoy</p>
+        <p>this game</p>
         <img src="./assets/images/rotate-screen.png" alt="Please rotate your screen">
     </div>
     
