Add site favicon

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="assets/css/style.css">
 
     <title>Bash Boris</title>
+
+    <link rel="shortcut icon" type="image/x-icon" href="./assets/images/boris.ico">
+
 </head>
 
 <body>
