--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <meta name="keywords" content="whack, mole, boris, brexit, game, uk, downing street, eu, european union, coffee break, relax, fun">
     <link rel="stylesheet" href="assets/css/style.css">
 
     <title>Bash Boris</title>
