Fix no space in button attributes, replace main closing tag, update TESTING.md

--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
         <!--Div to contain game mode options-->
 
         <div id="game-modes">
-            <button aria-label="Start Easy Game Button"onclick="startEasyTimedGame()" class="easy">EASY</button>
-            <button aria-label="Start Normal Game Button"onclick="startNormalTimedGame()" class="normal">NORMAL</button>
-            <button aria-label="Start Hard Game Button"onclick="startHardTimedGame()" class="hard">HARD</button>
+            <button aria-label="Start Easy Game Button" onclick="startEasyTimedGame()" class="easy">EASY</button>
+            <button aria-label="Start Normal Game Button" onclick="startNormalTimedGame()" class="normal">NORMAL</button>
+            <button aria-label="Start Hard Game Button" onclick="startHardTimedGame()" class="hard">HARD</button>
         </div>
 
         <!--Game Start and Rules Area-->
@@ -161,8 +161,8 @@
                 <button aria-label="Open Feedback Button" class="fscorebtn" onclick="openFeedback()">Rate our Game</button>
 
             </div>
-
-    </main>
+        </div>    
+    
 
      <!--Div to hold screen asking users to rotate horizontaly if under 568 px wide-->
 
@@ -174,7 +174,7 @@
         <img src="./assets/images/rotate-screen.png" alt="Please rotate your screen">
     </div>
     
-
+    </main>
     <footer>
         <div id="social">
             <ul id="social-links">
