docs:Add JSHint findings to TESTING.md

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
             <!--Countdown Timer and Score Keeping Area-->
 
             <div class="time-score-area">
-                <div class="hit"><h3>HITS</h3><span class="score">0</span></div>
-                <div class="no-hit"><h3>MISSES</h3><span class="miss">0</span></div>
+                <div class="hit"><p>HIT</p><span class="score">0</span></div>
+                <div class="no-hit"><p>MISS</p><span class="miss">0</span></div>
                 <div class="time"><p>Time left:</p><span id="time-left">30</span></div>
             </div>
 
