Add custom 404 page

--- a/404.html
+++ b/404.html
@@ -1,1 +1,23 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="assets/css/style.css">
 
+    <title>Bash Boris</title>
+
+    <link rel="shortcut icon" type="image/x-icon" href="./assets/images/boris.ico">
+
+</head>
+<body>
+
+    <img src="./assets/images/boris-fridge-404.png" alt="404 not found image">
+
+    <h1>OOPS......LOOKS LIKE YOU'VE BEEN CAUGHT HIDING IN THE FRIDGE AGAIN</h1>
+
+    <p>RETURN TO THE HOMEPAGE</p>
+    
+</body>
+</html>
