--- a/404.html
+++ b/404.html
@@ -13,11 +13,13 @@
 </head>
 <body>
 
-    <img src="./assets/images/boris-fridge-404.png" alt="404 not found image">
+    <div class="fridge-div">
+    <img class="fridge" src="./assets/images/boris-fridge-404.png" alt="404 not found image">
+    </div> 
+    <h1 class="title-404">OOPS......LOOKS LIKE YOU'VE BEEN CAUGHT</h1> 
+        <h1 class="title-404">HIDING IN THE FRIDGE AGAIN</h1>
 
-    <h1>OOPS......LOOKS LIKE YOU'VE BEEN CAUGHT HIDING IN THE FRIDGE AGAIN</h1>
-
-    <p>RETURN TO THE HOMEPAGE</p>
+    <p class="p-404">RETURN TO THE HOMEPAGE</p>
     
 </body>
 </html>
