Add hyperlink back to homepage on 404.html

--- a/404.html
+++ b/404.html
@@ -6,20 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/style.css">
 
+    <meta name="keywords" content="whack, mole, boris, brexit, game, uk, downing street, eu, european union, coffee break, relax, fun">
+
     <title>Bash Boris</title>
 
     <link rel="shortcut icon" type="image/x-icon" href="./assets/images/boris.ico">
 
 </head>
 <body>
+    <div class="image-holder">
+        <div class="fridge-div">
+            <img class="fridge" src="./assets/images/boris-fridge-404.png" alt="404 not found image">
+        </div> 
+    </div>
 
-    <div class="fridge-div">
-    <img class="fridge" src="./assets/images/boris-fridge-404.png" alt="404 not found image">
-    </div> 
     <h1 class="title-404">OOPS......LOOKS LIKE YOU'VE BEEN CAUGHT</h1> 
         <h1 class="title-404">HIDING IN THE FRIDGE AGAIN</h1>
 
-    <p class="p-404">RETURN TO THE HOMEPAGE</p>
+    <p class="p-404">RETURN TO THE <a href="https://chris-mcgonigle.github.io/bash-boris">HOMEPAGE</a></p>
     
 </body>
 </html>
