--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div class="time-score-area">
                 <div class="hit"><p>HIT</p><span class="score">0</span></div>
                 <div class="no-hit"><p>MISS</p><span class="miss">0</span></div>
-                <div class="time"><p>Time left:</p><span id="time-left">30</span></div>
+                <div class="time"><p>TIME</p><span id="time-left">30</span></div>
             </div>
 
             <!-- Main Game Board-->
